--- a/locale/ru.json
+++ b/locale/ru.json
@@ -37,6 +37,23 @@
     "goto_calc": "Открываю калькулятор.",
     "attach_hint": "Прикрепите файл(ы) сообщением здесь — они попадут в заявку.",
     "choose_req_type": "Выберите тип запроса:",
-    "or_choose_budget": "Или выберите ориентир бюджета кнопкой ниже:"
+    "or_choose_budget": "Или выберите ориентир бюджета кнопкой ниже:",
+
+
+    "back_step": "Шаг возвращён. Продолжайте.",
+    "skipped": "Пропущено.",
+    "draft_saved": "Черновик сохранён 💾",
+    "draft_found": "Нашёл вашу черновую заявку. Продолжаем с места остановки.",
+    "bad_email": "Похоже, email некорректен. Введите снова, пожалуйста.",
+    "bad_phone": "Контакт выглядит странно. Укажите телефон или @tg ещё раз.",
+    "edit_hint": "Хотите что-то поправить? Нажмите поле ниже:",
+    "confirm_hint": "Если всё верно, подтвердите отправку.",
+    "field_updated": "Обновил поле. Вот обновлённый превью:",
+    "thanks_id": "Спасибо! Заявка №{id} отправлена. Мы свяжемся с вами.",
+    "file_reject": "Формат файла не принят. Разрешены: PDF, DOCX, XLSX, PNG, JPG.",
+    "ai_data": "Опишите доступность данных: что уже есть? где лежит? приватность/доступ?",
+    "ai_dataset": "Оцените размер и качество датасета (объём, классы, аннотации).",
+    "web_auth": "Опишите аутентификацию (email/OTP/Social/OAuth/SAML и т.п.).",
+    "web_integrations": "Какие внешние интеграции (CRM, платежи, аналитика и т.п.)?"
   }
   
